# LABA3

./: .clang-tidy  CMakeLists.txt  arr.cpp  arr.h  arr_serialize.cpp  arr_serialize.h  bench.cpp  cbt_serialize.cpp  cbt_serialize.h  compl.cpp  compl.h  coverage.html  coverage.out  dList.cpp  dList.h  data.arr  data.queue  dlist.cpp  dlist.h  dlist_serialize.cpp  dlist_serialize.h  get_test.go  go.mod  hash.cpp  hash.h  hash_serialize.cpp  hash_serialize.h  list.cpp  list.h  list_serialize.cpp  list_serialize.h  main.cpp  main.go  prg  queue.cpp  queue.h  queue_serialize.cpp  queue_serialize.h  run_tests.go  serialization_check.go  (+7 more)
coverage_report/: cmd_line
ds/: arr.go  arr_serialize.go  arr_test.go  bench_test.go  cbt.go  cbt.txt  cbt_serialize.go  cbt_test.go  dlist.go  dlist_serialize.go  dlist_test.go  double_test.txt  get_test.go  hash.go  hash_serialize.go  hash_test.go  list.go  list_serialize.go  list_test.go  mylist.txt  queue.go  queue_serialize.go  queue_test.go  queue_test.txt  serialize.go  stack.go  stack_serialize.go  stack_test.go  stack_test.txt
lab3/zad1/cpp/: compile_commands.json  dynarr.cpp  dynarr.h  hash-table.cpp  hash-table.h  main  main.cpp  node.h  onelist.cpp  onelist.h  queue.cpp  queue.h  rbtree.cpp  rbtree.h  stack.cpp  stack.h  twolist.cpp  twolist.h
lab3/zad1/go/: go.mod  main  main.go
lab3/zad1/go/config/: config.go
lab3/zad1/go/dynarr/: dynarr.go
lab3/zad1/go/hashtable/: hash-table.go
lab3/zad1/go/onelist/: onelist.go
lab3/zad1/go/queue/: queue.go
lab3/zad1/go/stack/: stack.go
lab3/zad1/go/twolist/: twolist.go
lab3/zad2/cpp/dynarr/: bench.cpp  coverage.info  dynarr_benchmark  dynarrtest  dynarrtest-dynarr.gcda  dynarrtest-dynarr.gcno  dynarrtest-dynarrtest.gcda  dynarrtest-dynarrtest.gcno  dynarrtest.cpp  index.html
lab3/zad2/cpp/hashtable/: bench.cpp  coverage.info  cuckoo_load.txt  double_load.txt  hashtable_benchmark  hashtabletest  hashtabletest-hash-table.gcda  hashtabletest-hash-table.gcno  hashtabletest-hashtabletest.gcda  hashtabletest-hashtabletest.gcno  hashtabletest.cpp  index.html
lab3/zad2/cpp/onelist/: bench.cpp  coverage.info  index.html  onelist_benchmark  onelisttest  onelisttest-onelist.gcda  onelisttest-onelist.gcno  onelisttest-onelisttest.gcda  onelisttest-onelisttest.gcno  onelisttest.cpp
lab3/zad2/cpp/queue/: bench.cpp  coverage.info  index.html  queue_benchmark  queue_load.txt  queuetest  queuetest-queue.gcda  queuetest-queue.gcno  queuetest-queuetest.gcda  queuetest-queuetest.gcno  queuetest.cpp
lab3/zad2/cpp/rbtree/: bench.cpp  coverage.info  hashtabletest-hash-table.gcno  index.html  rbtree_benchmark  rbtree_save.txt  rbtreetest  rbtreetest-rbtree.gcda  rbtreetest-rbtree.gcno  rbtreetest-rbtreetest.gcda  rbtreetest-rbtreetest.gcno  rbtreetest.cpp
lab3/zad2/cpp/stack/: bench.cpp  coverage.info  index.html  stack_benchmark  stack_save.txt  stacktest  stacktest-stack.gcda  stacktest-stack.gcno  stacktest-stacktest.gcda  stacktest-stacktest.gcno  stacktest.cpp
lab3/zad2/cpp/twolist/: bench.cpp  coverage.info  index.html  twolist_benchmark  twolisttest  twolisttest-twolist.gcda  twolisttest-twolist.gcno  twolisttest-twolisttest.gcda  twolisttest-twolisttest.gcno  twolisttest.cpp
lab3/zad2/go/dynarr/: config.go  coverage.html  coverage.out  dynarr.go  dynarr_test.go  go.mod
lab3/zad2/go/dynarr/bench/: config.go  dynarr.go  dynarr_test.go  go.mod
lab3/zad2/go/hashtable/: config.go  coverage.html  coverage.out  go.mod  hashtable.go  hashtable_test.go  node.go
lab3/zad2/go/hashtable/bench/: go.mod  hashtable.go  hashtable_test.go
lab3/zad2/go/onelist/: coverage.html  coverage.out  go.mod  node.go  onelist.go  onelist_test.go
lab3/zad2/go/onelist/bench/: onelist.go  onelist_test.go
lab3/zad2/go/queue/: coverage.html  coverage.out  go.mod  node.go  queue.go  queue_test.go
lab3/zad2/go/queue/bench/: queue.go  queue_test.go
lab3/zad2/go/stack/: coverage.html  coverage.out  go.mod  node.go  stack.go  stack_test.go
lab3/zad2/go/stack/bench/: node.go  stack.go  stack_test.go
lab3/zad2/go/twolist/: coverage.html  coverage.out  go.mod  node.go  twolist.go  twolist_test.go
lab3/zad2/go/twolist/bench/: twolist.go  twolist_test.go
lab3/zad3/cpp/: cuckoo_test.txt  dynarr_test.txt  test.cpp
lab3/zad3/go/: cuckoo_test.txt  test  test.go  twolist_test.txt
lab3/zad3/go/config/: config.go
lab3/zad3/go/dynarr/: dynarr.go
lab3/zad3/go/hashtable/: hash-table.go
lab3/zad3/go/node/: node.go
lab3/zad3/go/onelist/: onelist.go
lab3/zad3/go/queue/: queue.go
lab3/zad3/go/stack/: stack.go
lab3/zad3/go/twolist/: twolist.go
num3/: rbtree_test.txt  test  test.cpp
tests/: CMakeLists.txt  arr_test.cpp  compl_test.cpp  dList_test.cpp  dlist_test.cpp  hash_test.cpp  list_test.cpp  mylist.txt  queue_test.cpp  serialization_runner.cpp  serialization_test.cpp  stack_test.cpp
uml/coverage_report/: cmd_line
